# trabalho-1-ewertonfsl

./: CMakeLists.txt  README.md  author.md
data/: caracteresInvalidos.txt  frequenciaInvalida.txt  palavras.txt  palavrasPequenas.txt
include/: forca.hpp
src/: forca.cpp  main.cpp
