
cmake_minimum_required(VERSION 3.5)
project(forca VERSION 0.1 LANGUAGES CXX )


### Execut치vel
# Diret칩rio contendo os .hpp
include_directories( include )

# Cria um execut치vel com nome "forca", adiciona neste execut치vel os arquivos src/main.cpp src/forca.cpp
add_executable( forca
                src/main.cpp
                src/forca.cpp )

# The end